--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hotwired/turbo-rails": "^7.2.4",
     "autoprefixer": "^10.4.12",
     "esbuild": "^0.15.12",
+    "flowbite": "^1.5.3",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   },
