--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
   database: todo_assignment_production
   username: todo_assignment
   password: <%= ENV["TODO_ASSIGNMENT_DATABASE_PASSWORD"] %>
